--- a/GDA.ipynb
+++ b/GDA.ipynb
@@ -143,6 +143,7 @@
     "\n",
     "def prob(z,mu,sig):\n",
     "#normal distribution formula\n",
+    "#we don't calculate the exact probabilities but given that the dataset has an equal amount of data for each class, this is good enough for our purpose\n",
     "    frac=1/((2*np.pi)**(4/2))*(np.linalg.det(sig)**(1/2))\n",
     "    ex=np.exp((-1/2)*(np.dot(np.dot((z-mu),np.linalg.inv(sig)),(z-mu).T)))\n",
     "    return frac*ex\n",
